--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>機車防竊追蹤系統</title>
-
-    <!-- 載入 Google Fonts 圓體字 -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <!-- 載入 Google Fonts 圓體字 -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC+Rounded:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
+        /* 全域套用圓體字 */
+        * {
+            font-family: 'Noto Sans TC Rounded', 'Microsoft JhengHei UI', 'PingFang TC', sans-serif !important;
+        }
+
         body {
-            font-family: 'Noto Sans TC', 'Microsoft JhengHei UI', 'PingFang TC', sans-serif;
             margin: 0;
             padding: 0;
-            background: #E0DED7; /* 莫蘭迪淺灰米色背景 */
+            background: linear-gradient(135deg, #d6cbc1, #c7d2d0); /* 莫蘭迪色背景 */
             display: flex;
             flex-direction: column;
             align-items: center;
         }
         h1 {
             margin: 20px 0 10px;
-            color: #6B5B5B; /* 莫蘭迪深灰褐色 */
+            color: #5a5a5a;
             font-weight: 700;
             letter-spacing: 1px;
         }
@@ -31,10 +33,9 @@
             border-radius: 15px;
             box-shadow: 0 4px 20px rgba(0,0,0,0.1);
             margin-bottom: 15px;
-            border: 2px solid #C0BEB5; /* 莫蘭迪灰邊框 */
         }
         .controls {
-            background: #F3F1ED; /* 莫蘭迪奶油色 */
+            background: #f5f2f0;
             border-radius: 12px;
             padding: 15px 20px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.08);
@@ -45,17 +46,17 @@
             margin-bottom: 20px;
         }
         button {
-            background-color: #A69F9F; /* 莫蘭迪灰紫色 */
+            background-color: #a7b0af;
             border: none;
             border-radius: 8px;
             padding: 10px 18px;
-            color: #F3F1ED; /* 文字淺色對比 */
+            color: white;
             font-size: 15px;
             cursor: pointer;
             transition: background 0.3s, transform 0.2s;
         }
         button:hover {
-            background-color: #8C8585; /* 莫蘭迪深灰紫色 */
+            background-color: #8f9a99;
             transform: translateY(-2px);
         }
         button:active {
@@ -63,7 +64,7 @@
         }
         #last-update {
             font-size: 14px;
-            color: #7A7A7A; /* 莫蘭迪灰色 */
+            color: gray;
             margin-top: 5px;
             flex-basis: 100%;
             text-align: center;
@@ -71,7 +72,7 @@
     </style>
 </head>
 <body>
-    <h1>機盜了啦 - 機車防盜系統</h1>
+    <h1>機盜了啦-機車防盜系統</h1>
     <div id="map"></div>
     <div class="controls">
         <button id="refresh-btn">更新位置</button>
@@ -90,19 +91,11 @@
             attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
 
-        // 新莫蘭迪色系圖標
         const bikeIcon = L.icon({
-            iconUrl: 'A_flat_vector_icon_features_a_silhouette_of_a_scoo.png', // 這裡換成你的灰紫色機車圖標路徑
+            iconUrl: 'https://cdn-icons-png.flaticon.com/512/9242/9242665.png',
             iconSize: [40, 40],
             iconAnchor: [20, 40],
             popupAnchor: [0, -40]
-        });
-
-        const userIcon = L.icon({
-            iconUrl: 'user_icon_grayblue.png', // 這裡換成你的灰藍色使用者圖標路徑
-            iconSize: [30, 30],
-            iconAnchor: [15, 30],
-            popupAnchor: [0, -30]
         });
 
         let bikeMarker = L.marker([25.0476, 121.5174], { icon: bikeIcon })
@@ -110,7 +103,7 @@
             .bindPopup("<b>您的機車</b>");
 
         let bikePath = [];
-        let polyline = L.polyline([], { color: '#BFA6A0', weight: 4 }).addTo(map);
+        let polyline = L.polyline([], { color: '#b06c6c', weight: 4 }).addTo(map);
         let pathVisible = true;
 
         async function updateBikeLocation() {
@@ -157,6 +150,13 @@
                         if (window.userMarker) {
                             map.removeLayer(window.userMarker);
                         }
+
+                        const userIcon = L.icon({
+                            iconUrl: 'https://cdn-icons-png.flaticon.com/512/447/447031.png',
+                            iconSize: [30, 30],
+                            iconAnchor: [15, 30],
+                            popupAnchor: [0, -30]
+                        });
 
                         window.userMarker = L.marker([userLat, userLng], { icon: userIcon })
                             .addTo(map)
