--- a/index.html
+++ b/index.html
@@ -5,74 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>機車防竊追蹤系統</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <!-- 載入 Google Fonts 圓體字 -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC+Rounded:wght@400;500;700&display=swap" rel="stylesheet">
-    <style>
-        /* 全域套用圓體字 */
-        * {
-            font-family: 'Noto Sans TC Rounded', 'Microsoft JhengHei UI', 'PingFang TC', sans-serif !important;
-        }
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
 
-        body {
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #d6cbc1); /* 莫蘭迪色背景 */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        h1 {
-            margin: 20px 0 10px;
-            color: #5a5a5a;
-            font-weight: 700;
-            letter-spacing: 1px;
-        }
-        #map {
-            height: 500px;
-            width: 90%;
-            border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-            margin-bottom: 15px;
-        }
-        .controls {
-            background: #f5f2f0;
-            border-radius: 12px;
-            padding: 15px 20px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-        button {
-            background-color: #a7b0af;
-            border: none;
-            border-radius: 8px;
-            padding: 10px 18px;
-            color: white;
-            font-size: 15px;
-            cursor: pointer;
-            transition: background 0.3s, transform 0.2s;
-        }
-        button:hover {
-            background-color: #8f9a99;
-            transform: translateY(-2px);
-        }
-        button:active {
-            transform: translateY(0);
-        }
-        #last-update {
-            font-size: 14px;
-            color: gray;
-            margin-top: 5px;
-            flex-basis: 100%;
-            text-align: center;
-        }
-    </style>
+    <style>
+    /* 全域字體改成圓體 */
+    body {
+        font-family: 'Noto Sans TC', 'Microsoft JhengHei UI', 'PingFang TC', sans-serif;
+        margin: 0;
+        padding: 0;
+        background: #E0DED7; /* 莫蘭迪淺灰米色背景 */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    h1 {
+        margin: 20px 0 10px;
+        color: #6B5B5B; /* 莫蘭迪深灰褐色 */
+        font-weight: 700;
+        letter-spacing: 1px;
+        font-family: inherit; /* 繼承圓體 */
+    }
+    #map {
+        height: 500px;
+        width: 90%;
+        border-radius: 15px;
+        box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+        margin-bottom: 15px;
+        border: 2px solid #C0BEB5; /* 莫蘭迪灰邊框 */
+    }
+    .controls {
+        background: #F3F1ED; /* 莫蘭迪奶油色 */
+        border-radius: 15px;
+        padding: 20px 25px;
+        box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 12px;
+        margin-bottom: 25px;
+        font-family: inherit; /* 繼承圓體 */
+    }
+    button {
+        background-color: #A69F9F; /* 莫蘭迪灰紫色 */
+        border: none;
+        border-radius: 25px; /* 圓潤按鈕 */
+        padding: 12px 22px;
+        color: #F3F1ED; /* 文字淺色對比 */
+        font-size: 16px; /* 稍大文字 */
+        font-weight: 500;
+        cursor: pointer;
+        transition: background 0.3s, transform 0.2s, box-shadow 0.2s;
+        font-family: inherit; /* 繼承圓體 */
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    button:hover {
+        background-color: #8C8585; /* 莫蘭迪深灰紫色 */
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    }
+    button:active {
+        transform: translateY(0);
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    #last-update {
+        font-size: 14px;
+        color: #7A7A7A; /* 莫蘭迪灰色 */
+        margin-top: 5px;
+        flex-basis: 100%;
+        text-align: center;
+        font-family: inherit; /* 繼承圓體 */
+    }
+</style>
+
+
 </head>
 <body>
-    <h1><b>機盜了啦-機車防盜系統</b></h1>
+    <h1>機盜了啦-機車防盜系統</h1>
     <div id="map"></div>
     <div class="controls">
         <button id="refresh-btn">更新位置</button>
@@ -103,7 +111,7 @@
             .bindPopup("<b>您的機車</b>");
 
         let bikePath = [];
-        let polyline = L.polyline([], { color: '#b06c6c', weight: 4 }).addTo(map);
+        let polyline = L.polyline([], { color: 'red', weight: 4 }).addTo(map);
         let pathVisible = true;
 
         async function updateBikeLocation() {
@@ -140,10 +148,16 @@
 
         document.getElementById('refresh-btn').addEventListener('click', updateBikeLocation);
 
+        // ======== 加強版「顯示我的位置」按鈕 ========
         document.getElementById('locate-btn').addEventListener('click', function () {
+            console.log("定位按鈕被點擊");
+            alert("開始嘗試取得定位...");
+
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(
                     (position) => {
+                        console.log("定位成功", position);
+                        alert("定位成功！");
                         const userLat = position.coords.latitude;
                         const userLng = position.coords.longitude;
 
@@ -169,6 +183,7 @@
                         map.fitBounds(bounds, { padding: [50, 50] });
                     },
                     (error) => {
+                        console.error("定位失敗", error);
                         let errorMsg = "";
                         switch (error.code) {
                             case error.PERMISSION_DENIED:
